<?xml version="1.0"?>
<package format="2">
  <name>up4ros</name>
  <version>0.0.1</version>
  <description>Ros wrapper of the AIPlan4EU Unified Planning library</description>
  <maintainer email="gemignani@magazino.eu">gemignani</maintainer>
  <author email="gemignani@magazino.eu">gemignani</author>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export />
</package>